# StuCCompiler

./: .gitignore  Cargo.toml  README.md  c99_bnf.json  hwk.c  lldb_tools.py  main.c  manual_compile.sh  my_json_bnf.txt  test.c
c_lib/: DEFAULT_DEFINES.h  fcntl.h  float.h  limits.h  math.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
src/: array_initialisation.rs  asm_boilerplate.rs  asm_gen_data.rs  asm_generation.rs  assembly_metadata.rs  ast_metadata.rs  binary_expression.rs  block_statement.rs  cast_expr.rs  classify_param.rs  compilation_error.rs  compile.rs  compound_statement.rs  constexpr_parsing.rs  control_flow_statement.rs  data_type_visitor.rs  debugging.rs  declaration.rs  enum_definition.rs  expression.rs  expression_operators.rs  function_call.rs  function_declaration.rs  function_definition.rs  generate_ir.rs  generate_ir_traits.rs  global_var_declaration.rs  goto_and_labels.rs  initialised_declaration.rs  iteration_statement.rs  l_value.rs  main.rs  member_access.rs  memory_size.rs  memory_type.rs  number_literal.rs  operator.rs  parse_data.rs  put_on_stack.rs  r_value.rs  (+17 more)
tests/: addition.c  addmultiply.c  addpointer.c  booleanand.c  booleanorlhspreprocessor.c  booleanorrhspreprocessor.c  brackets.c  castnegativetounsigned.c  cmpgreaterthan.c  cmplessthan.c  comments.c  division.c  divisiontozero.c  divmulbidmas2.c  enuminlineusage.c  enumsubstitution.c  equalsintpromotion.c  forstack.c  forwithoutscope.c  functioninexpression.c  functioninwhileloop.c  globalenum.c  helloworldstringliteral.c  ifdefpreprocessor.c  ifelse.c  (+31 more)
(+212 files in other folders)
