[package]
name = "StuCCompiler2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "1"
thiserror = "*"
indexmap = "2"
unwrap_let = "*"
memory_size = "*"
colored = "*"
logos = "*"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]