[package]
name = "StuCCompiler2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "1"
thiserror = "*"
indexmap = "2"
unwrap_let = "*"
memory_size = "*"
colored = "*"
logos = "*"
itertools = "0.14.0"
stack_management = {path="../stack_management"}
clap = {version = "4.5.48", features = ["cargo"]}

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]
